<resources>
    <string name="app_name">Reciper</string>
    <string name="add_recipe_menu">Add Recipe</string>
    <string name="recipe_name">Nom</string>
    <string name="recipe_name_edit_text">Nom</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_recipe_menu">Delete Recipe</string>
    <string name="edit_recipe_menu">Edit Recipe</string>
    <string name="share_recipe_menu">Share Recipe</string>
    <string name="ingredient">Ingredient</string>
    <string name="description_recipe">Description de la recette</string>
    <string name="ingredient_defaut">Nom de l\'ingredient</string>
    <string name="quantite">Quantite de l\'ingredient</string>
    <string name="vide"></string>
    <string name="commentaire">Des commentaires a propos de la recette</string>
    <string name="step">etape</string>
    <string name="type_step">Preparation</string>
    <string name="num_step">1</string>
    <string name="duration_step">20</string>
    <string name="duration_default">Durree (en min)</string>
    <string name="step_default">Decrire l\'etape</string>
    <string name="validation">validation</string>
    <string name="numero_step">numero</string>
    <string name="note">Une note de 1 a 5</string>
    <string name="favorite_recipe_menu">Favoris</string>
</resources>