<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="2dp">

    <TextView
        android:id="@+id/type_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/type_step"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/id_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/num_step"
        app:layout_constraintStart_toEndOf="@+id/type_step"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/step"
        app:layout_constraintStart_toEndOf="@+id/id_step"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/duration_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/text_margin"
        android:text="@string/duration_step"
        app:layout_constraintStart_toEndOf="@+id/step"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/button_delete_ingredient"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/ic_delete_menu"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>