<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nom de la recette"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/nom_recette"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_name_edit_text"
        android:layout_margin="16dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/nom"/>

    <TextView
        android:id="@+id/difficulte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Difficulté"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/nom_recette"/>

    <RadioGroup
        android:id="@+id/layout_difficulte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/difficulte">

        <RadioButton
            android:id="@+id/facile"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Facile"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/moyen"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Moyen"/>

        <RadioButton
            android:id="@+id/difficile"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Difficile"/>
    </RadioGroup>

    <TextView
        android:id="@+id/prix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Prix"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_difficulte"/>


    <RadioGroup
        android:id="@+id/layout_prix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/prix">
        <RadioButton
            android:id="@+id/pas_cher"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Pas cher"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/cher"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Cher"/>

        <RadioButton
            android:id="@+id/tres_cher"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Tres cher"/>
    </RadioGroup>

    <TextView
        android:id="@+id/nb_personne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Nombre de personne"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_prix"/>

    <NumberPicker
        android:id="@+id/picker_nb_personne"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/nb_personne"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Description"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/picker_nb_personne"/>

    <EditText
        android:id="@+id/description_contenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_recipe"
        android:layout_margin="16dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/description"/>

    <TextView
        android:id="@+id/commentaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Commentaire"
        android:textSize="20dp"
        android:gravity="center"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/description_contenu"/>

    <EditText
        android:id="@+id/commentaire_contenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/commentaire"
        android:layout_margin="16dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/commentaire"/>
</androidx.constraintlayout.widget.ConstraintLayout>